[package]
name = "micast_dynamite"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.7"
log = "0.4.26"
mlua = { version = "0.10.3", features = ["lua53", "serialize", "vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
scraper = "0.23.1"
serde_json = "1.0.140"
ulid = "1.2.1"
