[package]
name = "micast_dynamite"
version = "0.1.0"
edition = "2024"

[dependencies]
cssparser = "0.35.0"
env_logger = "0.11.7"
im = "15.1.0"
log = "0.4.26"
mlua = { version = "0.10.3", features = ["lua53", "serialize", "vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
scraper = "0.23.1"
serde_json = "1.0.140"
taffy = "0.7.7"
ulid = "1.2.1"

[dev-dependencies]
gl_render = { git = "https://gitlab.com/micast/rust-gl_render.git", branch = "wasm", default-features = false }
femtovg = "0.14.0"
